fix(theme/alt-v2): correctly align post avatars

--- a/styles/themes/default-alt-v2.css
+++ b/styles/themes/default-alt-v2.css
@@ -349,6 +349,8 @@ dl#grouplegend {
 
 .postavatar {
     margin-bottom: 1em !important;
+    display: flex;
+    justify-content: center;
 }
 
 .postavatar > img {
